--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,64 +116,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('2017-08-23')]"
+       "('2017-08-23')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
-    "most_recent_date=session.query(func.max(Measurement.date)).all()\n",
+    "most_recent_date=session.query(func.max(Measurement.date)).first()\n",
     "    \n",
     "most_recent_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2016-08-23 00:00:00\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "# Starting from the most recent data point in the database. \n",
-    "\n",
-    "max_date = np.ravel(most_recent_date)[0]\n",
-    "\n",
-    "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "max_date_2 = dt.datetime.strptime(max_date, '%Y-%m-%d')\n",
-    "max_date_2_ly = max_date_2 - dt.timedelta(days=365)\n",
-    "print (max_date_2_ly)\n",
-    "\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "results = session.query(Measurement.date, Measurement.prcp).\\\n",
-    "    filter(Measurement.date >= max_date_2_ly).\\\n",
-    "    filter(Measurement.prcp != \"None\").\\\n",
-    "    order_by(Measurement.date.asc()).all()\n",
-    "#results\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -188,25 +154,41 @@
     }
    ],
    "source": [
+    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
+    "# Starting from the most recent data point in the database. \n",
+    "\n",
+    "max_date = np.ravel(most_recent_date)[0]\n",
+    "\n",
+    "# Calculate the date one year from the last date in data set.\n",
+    "\n",
+    "max_date_2 = dt.datetime.strptime(max_date, '%Y-%m-%d')\n",
+    "max_date_2_ly = max_date_2 - dt.timedelta(days=365)\n",
+    "\n",
+    "# Perform a query to retrieve the data and precipitation scores\n",
+    "\n",
+    "results = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= max_date_2_ly).\\\n",
+    "    filter(Measurement.prcp != \"None\").\\\n",
+    "    order_by(Measurement.date.asc()).all()\n",
+    "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "\n",
     "prcp_df = pd.DataFrame(results, columns=['date', 'precipitation'])\n",
     "prcp_df.set_index('date', inplace=True,)\n",
-    "#print(prcp_df)\n",
+    "\n",
     "\n",
     "# Sort the dataframe by date\n",
     "# it is already sorted by date \n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
     "\n",
     "prcp_df.plot(y='precipitation', rot=90, use_index=True)\n",
-    "#plt.xticks(10)\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +309,7 @@
        "[277 rows x 1 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +359,7 @@
        "9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,16 +376,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('USC00519281', 2772), ('USC00519397', 2724), ('USC00513117', 2709), ('USC00519523', 2669), ('USC00516128', 2612), ('USC00514830', 2202), ('USC00511918', 1979), ('USC00517948', 1372), ('USC00518838', 511)]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'USC00519281'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +402,7 @@
     "# List the stations and the counts in descending order.\n",
     "results = session.query(Measurement.station,func.count(Measurement.station)).\\\n",
     "        group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()\n",
-    "\n",
+    "print(results)\n",
     "most_active_station = session.query(Measurement.station,func.count(Measurement.station)).\\\n",
     "        group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).first()\n",
     "\n",
@@ -423,34 +412,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(54.0,)]\n",
-      "[(85.0,)]\n",
-      "[(71.66378066378067,)]\n"
+      "The lowest temp is : 54.0\n",
+      "The highest temp is : 85.0\n",
+      "The average temp temp is : 71.66378066378067\n"
      ]
     }
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
-    "lowest_temp = session.query(func.min(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).all()\n",
-    "highest_temp = session.query(func.max(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).all()\n",
-    "average_temp = session.query(func.avg(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).all()\n",
+    "lowest_temp = session.query(func.min(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).first()\n",
+    "highest_temp = session.query(func.max(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).first()\n",
+    "average_temp = session.query(func.avg(Measurement.tobs)).filter(Measurement.station == most_active_station[0]).first()\n",
     "\n",
     "\n",
-    "print(lowest_temp)\n",
-    "print(highest_temp)\n",
-    "print(average_temp)"
+    "print(f\"The lowest temp is : {lowest_temp[0]}\")\n",
+    "print(f\"The highest temp is : {highest_temp[0]}\")\n",
+    "print(f\"The average temp temp is : {average_temp[0]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
